--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#3DA1B4</color>
     <color name="colorPrimaryDark">#3997AA</color>
     <color name="colorAccent">#287888</color>
-
+    <color name="trans_colorPrimary">#B73DA1B4</color>
     <color name="nav_icon">#E3E3E3</color>
 
     <color name="purple_200">#FFBB86FC</color>
