--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/main_container"
             android:layout_width="match_parent"
@@ -40,19 +39,34 @@
             app:layout_constraintBottom_toTopOf="@+id/navigation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar">
+            app:layout_constraintTop_toTopOf="parent">
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-        <androidx.appcompat.widget.Toolbar
+        <!--需要显示在顶端的放在这下面-->
+        <!--androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?android:attr/actionBarSize"
             android:background="@color/colorPrimary"
-            tools:ignore="MissingConstraints" />
+            app:subtitle="不仅仅有课表"
+            tools:ignore="MissingConstraints" /-->
 
-
-
-
+        <!--TextView
+            android:id="@+id/tv_left"
+            android:layout_width="wrap_content"
+            android:layout_height="60dp"
+            android:layout_gravity="end"
+            android:background="@drawable/circleside"
+            android:gravity="center_vertical"
+            android:maxLines="1"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:text="上课啦!!!!"
+            android:layout_marginBottom="50dp"
+            android:textSize="17sp"
+            app:layout_constraintBottom_toBottomOf="@+id/main_container"
+            app:layout_constraintEnd_toEndOf="parent" /-->
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navigation"
             android:theme="@style/AppThemeLight"
@@ -65,6 +79,9 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu" />
+
+
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
