--- a/app/src/main/res/layout/fragment_forum.xml
+++ b/app/src/main/res/layout/fragment_forum.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragments.ForumFragment"
-    android:background="@color/white">
+    android:background="@color/very_light_gray">
 
     <ScrollView
         android:id="@+id/scrollView3"
