--- a/app/src/main/res/layout/activity_show_json.xml
+++ b/app/src/main/res/layout/activity_show_json.xml
@@ -1,70 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="308dp"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".InputJsonActivity"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <EditText
         android:id="@+id/showjson"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:hint="将json文本复制到此处"
-        android:inputType="textMultiLine"/>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="108dp"
-        android:layout_gravity="center"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="@+id/showjson"
+        android:inputType="textMultiLine"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
+
 
         <Button
             android:id="@+id/btn_copy"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:layout_margin="15dp"
+
+
+            android:background="@drawable/shape_btn"
             android:text="复制"
             android:textColor="@color/white" />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-
         <Button
             android:id="@+id/btn_return"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:layout_marginTop="15dp"
-
-            android:layout_weight="1"
-            android:background="@color/colorPrimary"
+            android:layout_margin="15dp"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/shape_btn_white"
+            android:backgroundTint="@color/very_light_gray"
             android:text="返回"
-            android:textColor="@color/white" />
+             />
 
-        <Space
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1" />
-    </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
