--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,4 +28,18 @@
         <item name="android:background">@android:color/transparent</item>
     </style>
 
+    <style name="round_dialog" parent="@style/Theme.AppCompat.Light.Dialog">
+    </style>
+
+    <style name="round_dialog2" parent="Theme.AppCompat.Light.Dialog">
+        <item name="android:colorBackgroundCacheHint">@null</item>
+        <item name="android:windowFrame">@null</item><!--边框-->
+        <item name="android:windowIsFloating">true</item><!--是否浮现在activity之上-->
+        <item name="android:windowIsTranslucent">true</item><!--半透明-->
+        <item name="android:windowNoTitle">true</item><!--无标题-->
+        <item name="android:background">@drawable/shape_btn_white</item><!--dialog背景样式-->
+        <item name="android:windowBackground">@color/nothing</item><!-- 背景透明 -->
+        <item name="android:backgroundDimEnabled">false</item><!--模糊-->
+    </style>
+
 </resources>
