One Last Push 写报告去了

--- a/app/src/main/res/layout/activity_input_json.xml
+++ b/app/src/main/res/layout/activity_input_json.xml
@@ -13,7 +13,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="将json文本复制到此处"
+        android:textAlignment="center"
+        android:background="@null"
         android:layout_weight="1"
+        android:layout_margin="16dp"
         android:inputType="textMultiLine"/>
 
     <RadioButton
