--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -2,29 +2,33 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="150dp"
     android:orientation="vertical"
     android:background="@color/colorPrimary">
 
     <com.google.android.material.imageview.ShapeableImageView
         android:id="@+id/shapeableImageView"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginLeft="30dp"
-        android:layout_marginTop="35dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="32dp"
         android:src="@color/white"
-        app:shapeAppearance="@style/CircleStyle"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:padding="2dp"
+        app:strokeColor="@color/white"
+        app:strokeWidth="2dp"
+        app:shapeAppearance="@style/CircleStyle" />
 
     <TextView
         android:id="@+id/nav_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
         android:text="今日课表"
         android:textColor="@color/white"
-        android:textSize="40dp"
-        android:layout_marginLeft="10dp"
+        android:textSize="20dp"
+        app:layout_constraintBottom_toBottomOf="@+id/shapeableImageView"
         app:layout_constraintStart_toEndOf="@+id/shapeableImageView"
         app:layout_constraintTop_toTopOf="@+id/shapeableImageView" />
 
@@ -32,9 +36,9 @@
         android:id="@+id/nav_subtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="这里有一些介绍...什么的"
+        android:text="这个人很懒"
         android:textColor="@color/white"
-        android:textSize="20dp"
+        android:textSize="11dp"
 
         app:layout_constraintStart_toStartOf="@+id/nav_title"
         app:layout_constraintTop_toBottomOf="@+id/nav_title" />
