--- a/app/src/main/res/drawable/shape_grad_2.xml
+++ b/app/src/main/res/drawable/shape_grad_2.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <!--更浅的渐变。用于较少的文本。-->
     <gradient
         android:angle="180"
         android:endColor="@color/colorPrimary"
+        android:centerColor="@color/nothing"
         android:startColor="@color/nothing" />
 </shape>
