--- a/app/src/main/res/layout/activity_show_json.xml
+++ b/app/src/main/res/layout/activity_show_json.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="308dp"
-    android:layout_height="wrap_content"
+    android:layout_height="500dp"
     tools:context=".InputJsonActivity"
     android:background="@color/white"
     android:orientation="vertical">
@@ -11,8 +11,12 @@
     <EditText
         android:id="@+id/showjson"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:background="@null"
         android:hint="将json文本复制到此处"
+        android:textAlignment="center"
+        android:layout_margin="16dp"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
