--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,10 +17,20 @@
     <color name="blue">#888EF5</color>
     <color name="red">#FF0000</color>
     <color name="nothing">#00000000</color>
+    <color name="trans">#55FFFFFF</color>
 
     <color name="text_gray">#AEAEAE</color>
     <color name="light_gray">#D3D3D3</color>
     <color name="very_light_gray">#F3F3F3</color>
+
+    <color name="cls_1">#E91E63</color>
+    <color name="cls_2">#793DB4</color>
+    <color name="cls_3">#72A637</color>
+    <color name="cls_4">#C59D57</color>
+    <color name="cls_5">#B43D3D</color>
+    <color name="cls_6">#03A9F4</color>
+    <color name="cls_7">#3D65B4</color>
+    <color name="cls_8">#FF5722</color>
 
     <color name="nav_menu_icon">#5E5E5E</color>
     <color name="nav_menu_text">#474747</color>
