--- a/app/src/main/res/layout/activity_schedule.xml
+++ b/app/src/main/res/layout/activity_schedule.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout android:layout_width="match_parent"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer"
@@ -203,10 +204,16 @@
                     </LinearLayout>
 
                 </LinearLayout>
+
             </FrameLayout>
 
         </ScrollView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/note_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
+        </androidx.constraintlayout.widget.ConstraintLayout>
         <ImageView
             android:id="@+id/addCourse"
             android:layout_width="50dp"
